--- a/StudentSupport/templates/hod/Average_Feedback/average_feedback_end_sem.html
+++ b/StudentSupport/templates/hod/Average_Feedback/average_feedback_end_sem.html
@@ -20,16 +20,16 @@
     <link rel="stylesheet" type="text/css" href="{% static 'bower_components/switchery/css/switchery.min.css' %}">
     <!-- Tags css -->
     <link rel="stylesheet" type="text/css" href="{% static 'bower_components/bootstrap-tagsinput/css/bootstrap-tagsinput.css' %}">
-    <!-- feather Awesome -->
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/icon/font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/icon/feather/css/feather.css' %}">
-
     <!-- sweet alert framework -->
     <link rel="stylesheet" type="text/css" href="{% static 'bower_components/sweetalert/css/sweetalert.css' %}">
 
     <!-- Style.css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
+{#    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">#}
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/jquery.mCustomScrollbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/custom_css/bg.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/custom_css/custom_style.css' %}">
 </head>
 
 <body>
@@ -70,7 +70,6 @@
             </div>
         </div>
     </div>
-    <!-- Pre-loader end -->
 
     <!-- Download Report modal > Start -->
     <div class="modal fade" id="download-report-modal" tabindex="-1" role="dialog" style="z-index: 1050; display: none;" aria-hidden="true">
@@ -152,6 +151,7 @@
     </div>
     <!-- Download Report modal > End -->
 
+    <!-- Pre-loader end -->
     <div id="pcoded" class="pcoded">
         <div class="pcoded-overlay-box"></div>
         <div class="pcoded-container navbar-wrapper">
@@ -226,13 +226,9 @@
                             </div>
                             <div class="page-body">
                                 <div class="row">
-                                   <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9">
+                                   <div class="col-sm-12" id="div1">
                                        <div class="card">
-{#                                           <div class="card-header">#}
-{#                                               <h4 style="font-size: 20px">Average Feedback</h4>#}
-{#                                           </div>#}
                                            <div class="card-block">
-                                               <form>
                                                <div class="form-group row">
                                                         <label for="view_feedback_term" class="col-md-2 col-lg-2 col-form-label" style="font-weight: 900;">Select Term :</label>
                                                         <div class="col-md-4 col-lg-4">
@@ -243,7 +239,7 @@
                                                         </div>
                                                         <label for="view_feedback_year" class="col-md-2 col-lg-2 col-form-label" style="font-weight: 900;">Select Year:</label>
                                                         <div class="col-md-4 col-lg-4">
-                                                            <select class="custom-select" name="view_feedback_year" id="view_feedback_year" style="width: 100%">
+                                                            <select class="custom-select" name="view_feedback_year" id="view_feedback_year" style="width: 100%;">
                                                                 <script type="text/javascript">
                                                                     var start_year = 2020;
                                                                     var current_year = new Date().getFullYear();
@@ -268,13 +264,6 @@
                                                            <button type="button" class="btn btn-outline-primary" onclick="load_graph()">View Feedback</button>
                                                        </div>
                                                    </div>
-                                               </form>
-                                                <div class="col-sm-12">
-                                                       <button class="btn btn-sm btn-round btn-outline-info">
-                                                           End Semester <i class="feather icon-x"></i>
-                                                       </button>
-                                                       Filter Tabs goes here.
-                                                   </div>
                                                <div class="loader-block" style="display: none">
                                                    <svg id="loader2" viewBox="0 0 100 100">
                                                        <circle id="circle-loader2" cx="50" cy="50" r="45"></circle>
@@ -286,7 +275,7 @@
                                                            Updated On: <b><span id="feedback-date"></span></b>
                                                        </div>
                                                        <div class="col-sm-6 d-flex justify-content-end">
-                                                           You can see all the question &nbsp;<a href="#questions_list" style="color: dodgerblue; font-size: inherit">here.</a>
+                                                           You can see all the question &nbsp; <a href="#questions_list" style="color: dodgerblue; font-size: inherit">here.</a>
                                                        </div>
                                                    </div>
                                                    <canvas id="myChart"></canvas>
@@ -294,25 +283,20 @@
                                            </div>
                                        </div>
                                    </div>
-                                   <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3">
-                                       <div class="card">
-                                           <div class="card-header">
-                                               <h4 style="font-size: 20px">Filters</h4>
-                                           </div>
-                                           <div class="card-block">
-                                               <div class="d-inline">
-                                                   <h5 class="p-b-10">Term</h5>
-                                                   <ul class="d-inline-block">
-                                                       <li>Odd</li>
-                                                       <li>Even</li>
-                                                   </ul>
-                                               </div>
-                                           </div>
-                                       </div>
-                                   </div>
+                                    <div class="col-sm-3" id="div2" style="display: none">
+                                        <div class="card">
+                                            <div class="card-header p-b-0 d-flex justify-content-center">
+                                                <h5>Subjects</h5>
+                                            </div>
+                                            <div class="card-body">
+                                                <ul class="list-group" id="subject_list_group">
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
                                </div>
                                 <div class="row">
-                                    <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9">
+                                    <div class="col-sm-12">
                                         <div class="card" id="questions_list">
                                             <div class="card-header">
                                                 <h4 style="font-size: 20px">Questions List</h4>
@@ -345,14 +329,14 @@
     <!-- modernizr js -->
     <script type="text/javascript" src="{% static 'bower_components/modernizr/js/modernizr.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/modernizr/js/css-scrollbars.js' %}"></script>
+    <!-- Switch component js -->
+    <script type="text/javascript" src="{% static 'bower_components/switchery/js/switchery.min.js' %}"></script>
 
     <!-- sweet alert js -->
     <script type="text/javascript" src="{% static 'bower_components/sweetalert/js/sweetalert.min.js' %}"></script>
 
     <!-- Chart js -->
     <script type="text/javascript" src="{% static 'assets/extra-js/Chart/Chart.js_2.9.3.js' %}"></script>
-    <!-- Switch component js -->
-    <script type="text/javascript" src="{% static 'bower_components/switchery/js/switchery.min.js' %}"></script>
 
     <!-- custom js -->
     <script src="{% static 'assets/js/vartical-layout.min.js' %}"></script>
@@ -547,9 +531,35 @@
                         $(document).find('div#content').css('display', 'block');
                         var response = JSON.parse(msg);
                         console.log(response);
-                        console.log(response['ratings'].length);
-                        if(response['ratings'].length == 0) {
+                        var subject_len = response['ratings'].length;
+
+                        //Displaying subject list
+                        var div1 = $(document).find('div#div1');
+                        var div2 = $(document).find('div#div2');
+                        div1.removeClass('col-sm-12');
+                        div1.addClass('col-sm-9');
+                        var list_group = div2.find('ul#subject_list_group');
+                        var subject_lis = '';
+                        for(var i=0;i<subject_len;++i) {
+                            subject_lis += '<li class="list-group-item d-flex justify-content-between align-items-center">';
+                                subject_lis += response['ratings'][i]['subject_name'];
+                                subject_lis += '<span class="badge badge-primary badge-pill" data-toggle="popover" data-placement="left" title="Feedback Count" data-content="Total number of feedback received in this subject in selected year.">';
+                                    subject_lis += response['ratings'][i]['count'];
+                                subject_lis += '</span>';
+                            subject_lis += '</li>';
+                        }
+                        list_group.html(subject_lis);
+                        div2.show();
+
+
+                        if(subject_len == 0) {
                             $(document).find('div#content').css('display', 'none');
+                            //Displaying subject list
+                            var div1 = $(document).find('div#div1');
+                            var div2 = $(document).find('div#div2');
+                            div1.addClass('col-sm-12');
+                            div1.removeClass('col-sm-9');
+                            div2.hide();
                             window.myBar.clear();
                             swal({
                                 title: "Feedback Not available.",
@@ -565,17 +575,40 @@
                     },
                     error: function (msg) {
                         var response = JSON.parse(msg.responseText);
+                        //Displaying subject list
+                        var div1 = $(document).find('div#div1');
+                        var div2 = $(document).find('div#div2');
+                        div1.addClass('col-sm-12');
+                        div1.removeClass('col-sm-9');
+                        div2.hide();
+
+                        $(document).find('div.loader-block').css('display', 'none');
+                        $(document).find('div#content').css('display', 'none');
                         swal({
                             title: "Error!",
                             text: response['error'],
                             type: "error",
                         });
-                        $(document).find('div.loader-block').css('display', 'none');
-                        $(document).find('div#content').css('display', 'none');
                     },
                 });
             }
         }
+    </script>
+
+    <script type="text/javascript">
+        $(document).on('click', '.icard-subtitles', function (event) {
+            event.preventDefault();
+            if($(this).css('display') == "block") {
+                $(this).css('display', 'none');
+            }
+            else {
+                $(this).css('display', 'block');
+            }
+        })
+    </script>
+
+    <script type="text/javascript">
+        $('[data-toggle="popover"]').popover();
     </script>
 </body>
 
