--- a/StudentSupport/templates/hod/Detailed_Feedback/detailed_feedback_end_sem.html
+++ b/StudentSupport/templates/hod/Detailed_Feedback/detailed_feedback_end_sem.html
@@ -257,7 +257,7 @@
                                                             </div>
                                                             <label class="col-md-2 col-lg-2 col-form-label" for="view_feedback_subject" style="font-weight: 900;">Select Subject : </label>
                                                             <div class="col-md-4 col-lg-4">
-                                                                <select class="custom-select" onclick="check_term()" id="view_feedback_subject" name="view_feedback_subject" style="width: 100%" data-toggle="tooltip" title="Subject list will be displayed dynamically according to the faculty and term you have chosen.">
+                                                                <select class="custom-select" onclick="check_term()" id="view_feedback_subject" name="view_feedback_subject" style="width: 100%" data-toggle="tooltip" data-placement="left" title="Subject list will be displayed dynamically according to the faculty and term you have chosen.">
                                                                     <option value="-1">Select Subject</option>
                                                                 </select>
                                                             </div>
@@ -269,6 +269,17 @@
                                                         </div>
                                                     </form>
                                                     </div>
+                                                <div class="row" id="parameters_selected" style="display:none;">
+                                                    <div class="col-sm-12 d-flex justify-content-end"><a href="#" style="color: dodgerblue; font-size: inherit" id="modify_parameters">Modify Parameters</a></div>
+                                                    <label class="col-sm-2 col-form-label" style="font-weight: 900;">Term : </label>
+                                                    <label class="col-sm-4 col-form-label" id="parameter_term"></label>
+                                                    <label class="col-md-2 col-form-label" style="font-weight: 900;">Faculty : </label>
+                                                    <label class="col-md-4 col-form-label" id="parameter_faculty"></label>
+                                                    <label class="col-md-2 col-form-label" style="font-weight: 900;">Subject : </label>
+                                                    <label class="col-md-4 col-form-label" id="parameter_subject"></label>
+                                                    <label class="col-md-2 col-form-label" style="font-weight: 900;">Semester : </label>
+                                                    <label class="col-md-4 col-form-label" id="parameter_semester"></label>
+                                                </div>
                                                 <div class="loader-block" style="display: none">
                                                    <svg id="loader2" viewBox="0 0 100 100">
                                                        <circle id="circle-loader2" cx="50" cy="50" r="45"></circle>
@@ -281,7 +292,6 @@
                                                     </nav>
                                                     <div class="row p-b-10">
                                                         <div class="col-sm-6">Feedback Given Date: <b id="view_feedback_date"></b> </div>
-                                                        <div class="col-sm-6 d-flex justify-content-end"><a href="#" style="color: dodgerblue; font-size: inherit" id="modify_parameters">Modify Parameters</a></div>
                                                     </div>
                                                     <div class="table-responsive">
                                                         <table class="table table-hover table-bordered">
@@ -394,14 +404,14 @@
             if(term == "0") {
                 $.each(subjects_dict[fac_id], function (index, value) {
                     if(value['subject_semester'] % 2) {
-                        sub_html += '<option value="'+ value['subject_id'] +'">'+ value['subject_name'] + ' (' + value['subject_code'] + ')' + '</option>';
+                        sub_html += '<option value="'+ value['subject_id'] +'" sem="'+ value['subject_semester'] +'">'+ value['subject_name'] + ' (' + value['subject_code'] + ')' + '</option>';
                     }
                 });
             }
             else {
                 $.each(subjects_dict[fac_id], function (index, value) {
                     if(!(value['subject_semester'] % 2)) {
-                        sub_html += '<option value="'+ value['subject_id'] +'">'+ value['subject_name'] + ' (' + value['subject_code'] + ')' + '</option>';
+                        sub_html += '<option value="'+ value['subject_id'] +'" sem="'+ value['subject_semester'] +'">'+ value['subject_name'] + ' (' + value['subject_code'] + ')' + '</option>';
                     }
                 });
             }
@@ -544,11 +554,21 @@
 
         // this is the function to load feedback from server to display all the feedback.
         function load_feedback() {
+            var faculty_select_tag = $(document).find('select#view_feedback_faculty option:selected');
+            var subject_select_tag = $(document).find('select#view_feedback_subject option:selected');
+            var term_select_tag = $(document).find('select#view_feedback_term option:selected');
+            var year_select_tag = $(document).find('select#view_feedback_year option:selected');
+            // filling parameters_selected div
+            $(document).find('label#parameter_term').html(term_select_tag.text() +" "+ year_select_tag.text());
+            $(document).find('label#parameter_faculty').html(faculty_select_tag.text());
+            $(document).find('label#parameter_subject').html(subject_select_tag.text());
+            $(document).find('label#parameter_semester').html(subject_select_tag.attr('sem'));
+
             feedback_list = [];
-            var faculty_id = $(document).find('select#view_feedback_faculty option:selected').val();
-            var subject_id = $(document).find('select#view_feedback_subject option:selected').val();
-            var term = $(document).find('select#view_feedback_term option:selected').val();
-            var year = $(document).find('select#view_feedback_year option:selected').val();
+            var faculty_id = faculty_select_tag.val();
+            var subject_id = subject_select_tag.val();
+            var term = term_select_tag.val();
+            var year = year_select_tag.val();
             if(faculty_id == "-1" || subject_id == "-1" || term == "-1" || year == "-1") {
                 alert('All the fields are required.');
             }
@@ -573,9 +593,11 @@
                         $(document).find('.loader-block').css('display','none');
                         $(document).find('div#feedback_parameters').css('display', 'none');
                         $(document).find('#feedback_content').css('display','block');
+                        $(document).find('#parameters_selected').show();
                         feedback_list = response['feedback_list'];
                         var len = feedback_list.length;
                         if(len<1) {
+                            $(document).find('#parameters_selected').hide();
                             $(document).find('#feedback_content').css('display','none');
                             $(document).find('div#feedback_parameters').css('display', 'block');
                             swal({
@@ -599,6 +621,7 @@
                             type: "error",
                         });
                         $(document).find('div#feedback_parameters').css('display', 'block');
+                        $(document).find('#parameters_selected').hide();
                     },
                 });
             }
@@ -614,14 +637,14 @@
             if(term == "0") {
                 $.each(subjects_dict[fac_id], function (index, value) {
                     if(value['subject_semester'] % 2) {
-                        sub_html += '<option value="'+ value['subject_id'] +'">'+ value['subject_name'] + ' (' + value['subject_code'] + ')' + '</option>';
+                        sub_html += '<option value="'+ value['subject_id'] +'" sem="'+ value['subject_semester'] +'">'+ value['subject_name'] + ' (' + value['subject_code'] + ')' + '</option>';
                     }
                 });
             }
             else {
                 $.each(subjects_dict[fac_id], function (index, value) {
                     if(!(value['subject_semester'] % 2)) {
-                        sub_html += '<option value="'+ value['subject_id'] +'">'+ value['subject_name'] + ' (' + value['subject_code'] + ')' + '</option>';
+                        sub_html += '<option value="'+ value['subject_id'] +'" sem="'+ value['subject_semester'] +'">'+ value['subject_name'] + ' (' + value['subject_code'] + ')' + '</option>';
                     }
                 });
             }
