--- a/StudentSupport/templates/hod/hod_dashboard.html
+++ b/StudentSupport/templates/hod/hod_dashboard.html
@@ -305,7 +305,7 @@
                                     </div>
                                     <div class="page-body">
                                         <div class="row">
-                                            <div class="col-xl-4 col-md-6">
+                                            <div class="col-xl-4 col-md-6 col-sm-6">
                                                 <a href="#">
                                                     <div class="card social-card bg-simple-c-blue">
                                                         <div class="card-block">
@@ -323,7 +323,7 @@
                                                     </div>
                                                 </a>
                                             </div>
-                                            <div class="col-xl-4 col-md-6">
+                                            <div class="col-xl-4 col-md-6 col-sm-6">
                                                 <a href="#">
                                                     <div class="card social-card bg-simple-c-yellow">
                                                         <div class="card-block">
@@ -341,7 +341,7 @@
                                                     </div>
                                                 </a>
                                             </div>
-                                            <div class="col-xl-4 col-md-6">
+                                            <div class="col-xl-4 col-md-6 col-sm-6">
                                                 <a href="#">
                                                     <div class="card social-card bg-simple-c-green">
                                                         <div class="card-block">
@@ -422,11 +422,11 @@
     <script type="text/javascript" src="{% static 'bower_components/popper.js/js/popper.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/bootstrap/New/js/bootstrap.min.js' %}"></script>
     <!-- jquery slimscroll js -->
-    <script type="text/javascript" src="{%static 'bower_components/jquery-slimscroll/js/jquery.slimscroll.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bower_components/jquery-slimscroll/js/jquery.slimscroll.js' %}"></script>
     <!-- modernizr js -->
     <script type="text/javascript" src="{% static 'bower_components/modernizr/js/modernizr.js' %}"></script>
 
-    <script src="{% static 'assets/js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+{#    <script src="{% static 'assets/js/jquery.mCustomScrollbar.concat.min.js' %}"></script>#}
     <script type="text/javascript" src="{% static 'assets/js/SmoothScroll.js' %}"></script>
     <script src="{% static 'assets/js/pcoded.min.js' %}"></script>
     <!-- custom js -->
